# proteus

./: Cargo.toml  LICENSE-MIT  proteus-prd.md
applets/: Cargo.toml
applets/src/: lib.rs
applets/src/coreutils/: basename.rs  cat.rs  chgrp.rs  chmod.rs  chown.rs  cp.rs  dirname.rs  echo.rs  env.rs  false_cmd.rs  groups.rs  head.rs  id.rs  ln.rs  ls.rs  mkdir_applet.rs  mod.rs  mv.rs  printf.rs  pwd.rs  rm.rs  rmdir.rs  tail.rs  tee.rs  touch.rs  true_cmd.rs  uname.rs  wc.rs  whoami.rs
applets/src/fileutils/: find.rs  gzip.rs  mod.rs  tar.rs  xargs.rs
applets/src/misc/: date.rs  mod.rs  od.rs  seq.rs
applets/src/textutils/: awk.rs  cut.rs  egrep.rs  fgrep.rs  grep.rs  mod.rs  sed.rs  sort.rs  tr.rs  uniq.rs
core/: Cargo.toml
core/src/: args.rs  compliance.rs  error.rs  glob.rs  io.rs  lib.rs  locale.rs  path.rs  permissions.rs  regex.rs  sandbox.rs  utf8.rs
core/src/platform/: freebsd.rs  linux.rs  macos.rs  mod.rs
shell/: Cargo.toml
shell/src/: builtins.rs  interpreter.rs  lexer.rs  lib.rs  parser.rs
src/: main.rs
tasks/: 001-foundation-and-core.md  002-applet-expansion.md  003-shell-posix-roadmap.md  004-quality-security-release.md  run-state.md  task-execution-plan.md  tasks-status.md
tests/: coreutilsAndMisc.rs  dateAndMiscCompat.rs  securityModes.rs  shellBehavior.rs  textAndFileApplets.rs
tests/compat/: basicCompat.rs  securityModes.rs
tests/integration/: shellBehavior.rs  textAndFileApplets.rs
tests/posix/: basicPosix.rs
