[package]
name = "proteus"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Shape-shifting Unix toolkit — one binary, every tool."
repository = "https://github.com/user/proteus"

[workspace]
members = [
    "core",
    "applets",
    "shell",
]
resolver = "3"

[workspace.dependencies]
proteus-core = { path = "core" }
proteus-applets = { path = "applets" }
proteus-shell = { path = "shell" }

[dependencies]
proteus-core = { workspace = true }
proteus-applets = { workspace = true }
proteus-shell = { workspace = true }

[features]
default = ["profile-standard"]

# Build profiles
profile-minimal = ["cat", "cp", "mv", "rm", "ls", "mkdir", "echo", "sh", "grep", "egrep", "fgrep", "true", "false"]
profile-standard = ["profile-minimal", "head", "tail", "wc", "pwd", "chmod", "chown", "chgrp", "touch", "rmdir", "ln", "basename", "dirname"]
profile-full = ["profile-standard"]
profile-container = ["profile-minimal", "head", "tail", "wc", "pwd"]
profile-embedded = ["profile-minimal"]

# GNU extension toggle
gnu-extensions = []

# Shell extensions
shell-extended = []

# Individual applets - coreutils
cat = ["proteus-applets/cat"]
ls = ["proteus-applets/ls"]
cp = ["proteus-applets/cp"]
mv = ["proteus-applets/mv"]
rm = ["proteus-applets/rm"]
echo = ["proteus-applets/echo"]
head = ["proteus-applets/head"]
tail = ["proteus-applets/tail"]
wc = ["proteus-applets/wc"]
pwd = ["proteus-applets/pwd"]
mkdir = ["proteus-applets/mkdir"]
rmdir = ["proteus-applets/rmdir"]
touch = ["proteus-applets/touch"]
chmod = ["proteus-applets/chmod"]
chown = ["proteus-applets/chown"]
chgrp = ["proteus-applets/chgrp"]
ln = ["proteus-applets/ln"]
basename = ["proteus-applets/basename"]
dirname = ["proteus-applets/dirname"]
true = ["proteus-applets/true"]
false = ["proteus-applets/false"]

# Individual applets - text processing
grep = ["proteus-applets/grep"]
egrep = ["proteus-applets/egrep"]
fgrep = ["proteus-applets/fgrep"]

# Shell
sh = ["proteus-shell/sh"]

[profile.release]
lto = true
opt-level = "z"
strip = true
panic = "abort"
codegen-units = 1
