[package]
name = "proteus-applets"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Individual tool implementations for Proteus"

[dependencies]
proteus-core = { workspace = true }
libc = "0.2"

[features]
# Coreutils
cat = []
ls = []
cp = []
mv = []
rm = []
echo = []
head = []
tail = []
wc = []
pwd = []
mkdir = []
rmdir = []
touch = []
chmod = []
chown = []
chgrp = []
ln = []
basename = []
dirname = []
realpath = []
readlink = []
stat = []
mktemp = []
sync = []
true = []
false = []
yes = []
sleep = []
uname = []
id = []
whoami = []
groups = []
env = []
tee = []
printf = []

# Text processing
grep = []
egrep = []
fgrep = []
sed = []
awk = []
sort = []
uniq = []
cut = []
paste = []
join = []
tr = []
tac = []
rev = []
fold = []
expand = []
unexpand = []
comm = []

# File utilities
find = []
xargs = []
tar = []
gzip = []
gunzip = []
bzip2 = []
bunzip2 = []
xz = []
unxz = []
zcat = []
cpio = []
dd = []
install = []
file = []
md5sum = []
sha256sum = []
sha512sum = []

# Network
wget = []
nc = []
ping = []
ping6 = []
traceroute = []
nslookup = []
hostname = []
ifconfig = []
ip = []
route = []
arp = []
telnet = []

# Process
ps = []
kill = []
killall = []
top = []
free = []
uptime = []
renice = []
nice = []
nohup = []
time = []

# System
mount = []
umount = []
fdisk = []
mkfs-ext2 = []
mkfs-vfat = []
fsck = []
swapon = []
swapoff = []
sysctl = []
dmesg = []
lsmod = []
modprobe = []
insmod = []
rmmod = []
mdev = []

# Editors
vi = []
diff = []
patch = []
ed = []
cmp = []

# Misc
date = []
cal = []
bc = []
dc = []
hexdump = []
od = []
seq = []
which = []
logger = []
strings = []

# Init & service
init = []
halt = []
reboot = []
poweroff = []
getty = []
