[package]
name = "proteus-applets"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Individual tool implementations for Proteus"

[dependencies]
proteus-core = { workspace = true }
libc = "0.2"

[features]
# Coreutils
cat = []
ls = []
cp = []
mv = []
rm = []
echo = []
head = []
tail = []
wc = []
pwd = []
mkdir = []
rmdir = []
touch = []
chmod = []
chown = []
chgrp = []
ln = []
basename = []
dirname = []
true = []
false = []

# Text processing
grep = []
egrep = []
fgrep = []
sed = []
sort = []
cut = []
tr = []
uniq = []
