[package]
name = "proteus-applets"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Individual tool implementations for Proteus"

[dependencies]
proteus-core = { workspace = true }
libc = "0.2"
miniz_oxide = "0.8"

[features]
# Coreutils
cat = []
ls = []
cp = []
mv = []
rm = []
echo = []
head = []
tail = []
wc = []
pwd = []
mkdir = []
rmdir = []
touch = []
chmod = []
chown = []
chgrp = []
ln = []
basename = []
dirname = []
printf = []
tee = []
env = []
uname = []
id = []
whoami = []
groups = []
true = []
false = []

# Text processing
grep = []
egrep = []
fgrep = []
sed = []
sort = []
cut = []
tr = []
uniq = []
awk = []

# File utilities
find = []
xargs = []
tar = []
gzip = []

# Misc
date = []
od = []
seq = []
